fix spacing below product quantity label

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,1 +1,3 @@
-
+.prod__option-label {
+  display: block;
+}
